fixed wrapping issue for sure probably

--- a/src/client/quoridor_site/quoridor_site_backend/static/css/styles.css
+++ b/src/client/quoridor_site/quoridor_site_backend/static/css/styles.css
@@ -7,15 +7,17 @@ h1 {
     font-weight: bold;
 }
 
-.games {
-    margin: auto;
+.flex-container {
+    display: flex;
+    flex-direction: row;
+    height: 100%;
+    justify-content: center;
 }
 
-
 div {
-    padding-left: 20%;
-    padding-right: 20%;
-    padding-top: 75px;
+    /*padding-left: 20%;
+    padding-right: 20%;*/
+    padding-top: 50px;
 }
 
 body{
